# OverTime

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  OverTime.sln  OverTime.vcxproj  README.md
Breeze/: Breeze.vcxproj  Breeze.vcxproj.filters  CMakeLists.txt
Breeze/assets/shaders/: color.frag  color.vert  texture.frag  texture.vert
Breeze/src/: Breeze.cpp  Breeze.h  cameraWrapper.cpp  cameraWrapper.h  gameLayer.cpp  gameLayer.h  gameStateMachine.cpp  gameStateMachine.h  grid.cpp  grid.h  gridManager.cpp  gridManager.h  player.h  ship.cpp  ship.h  stateMachine.h  test2d.cpp  test2d.h  uiLayer.cpp  uiLayer.h
Breeze/src/ui/: button.cpp  button.h  counter.cpp  counter.h  gameUI.cpp  gameUI.h  grid.cpp  grid.h  interactElement.cpp  interactElement.h  maskLayer.cpp  maskLayer.h  objectPool.cpp  objectPool.h  ship.cpp  ship.h  themeManager.cpp  themeManager.h
OverTime/: CMakeLists.txt  OverTime.vcxproj  OverTime.vcxproj.filters
OverTime/src/: overtime.cpp  overtime.h  pch.cpp  pch.h
OverTime/src/core/: Application.cpp  Application.h  CMakeLists.txt  EntryPoint.h  core.h  input.h  keyCodes.h  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  mouseButtonCodes.h  timeStep.h  window.h
OverTime/src/core/layers/: layer.cpp  layer.h  layerStack.cpp
OverTime/src/events/: CMakeLists.txt  applicationEvent.h  event.h  keyEvent.h  mouseEvent.h
OverTime/src/imGui/: CMakeLists.txt  imguiLayer.cpp  imguiLayer.h
OverTime/src/platform/: CMakeLists.txt  input.h  window.h
OverTime/src/platform/windows/: CMakeLists.txt  winput.cpp  winput.h  wwindow.cpp  wwindow.h
OverTime/src/renderer/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  renderCommand.h  renderContext.h  renderer.cpp  renderer.h  renderer2D.cpp  renderer2D.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h
OverTime/src/renderer/openGL/: openGLBuffer.cpp  openGLBuffer.h  openGLContext.cpp  openGLContext.h  openGLRenderCommand.cpp  openGLRenderCommand.h  openGLShader.cpp  openGLShader.h  openGLTexture.cpp  openGLTexture.h  openGLVertexArray.cpp  openGLVertexArray.h
OverTime/src/scripting/: CMakeLists.txt  oCameraController.cpp  oCameraController.h
SandBox/: CMakeLists.txt
SandBox/assets/shaders/: texture.vert
SandBox/src/: test2d.cpp
clientSideTest/: CMakeLists.txt
clientSideTest/assets/shaders/: texture.frag
clientSideTest/src/: testApp.cpp  testApp.h
cmake/Modules/: OverTimeConfigDefine.cmake
